Bug 904981 - Clear surface devices offsets in DrawTargetCairo since we don't use them. r=Bas